Fix flex box units for IE, fix z-indexes in hero

--- a/less/hero.less
+++ b/less/hero.less
@@ -84,7 +84,7 @@
         bottom: -150px;
         width: 310px;
         opacity: 0;
-        z-index: 10;
+        z-index: 5;
 
         @media @screen-tablet {
             right: -65px;
@@ -109,6 +109,7 @@
         position: absolute;
         left: 0;
         right: 0;
+        z-index: 10;
         bottom: 130px;
         display: inline-block;
         background: url(@scroll-down) center center no-repeat;
