--- a/less/skills.less
+++ b/less/skills.less
@@ -37,7 +37,7 @@
     }
 
     &__item {
-        flex: 1 0 0%;
+        flex: 1 0 auto;
         margin: 0 5px;
         align-self: flex-end;
         position: relative;
